add: swagger to upload file image/photo, fix: swagger and tidy up code
